tags/Cosmos-1.0/SOURCES/ModelGenerator/LhaParser/Lha-parser.output
Terminals unused in grammar

   LhaName


Grammar

    0 $accept: LHA "end of file"

    1 LHA: declarations InitFinal definitions

    2 declarations: Sizes Constants Lists HaslExp
    3             | Sizes Lists HaslExp

    4 IntMarkingFormula: ival
    5                  | str
    6                  | LB IntMarkingFormula RB
    7                  | MINUS IntMarkingFormula
    8                  | IntMarkingFormula PLUS IntMarkingFormula
    9                  | IntMarkingFormula MINUS IntMarkingFormula
   10                  | IntMarkingFormula MUL IntMarkingFormula
   11                  | IntMarkingFormula POWER IntMarkingFormula
   12                  | FLOOR LB IntMarkingFormula RB
   13                  | ABS LB IntMarkingFormula RB
   14                  | FLOOR LB IntMarkingFormula DIV IntMarkingFormula RB
   15                  | MIN LB IntMarkingFormula COMMA IntMarkingFormula RB
   16                  | MAX LB IntMarkingFormula COMMA IntMarkingFormula RB

   17 RealMarkingFormula: rval
   18                   | ival
   19                   | str
   20                   | LB RealMarkingFormula RB
   21                   | MINUS RealMarkingFormula
   22                   | RealMarkingFormula DIV RealMarkingFormula
   23                   | RealMarkingFormula PLUS RealMarkingFormula
   24                   | RealMarkingFormula MINUS RealMarkingFormula
   25                   | RealMarkingFormula MUL RealMarkingFormula
   26                   | RealMarkingFormula POWER RealMarkingFormula
   27                   | FLOOR LB RealMarkingFormula RB
   28                   | ABS LB RealMarkingFormula RB
   29                   | MIN LB RealMarkingFormula COMMA RealMarkingFormula RB
   30                   | MAX LB RealMarkingFormula COMMA RealMarkingFormula RB

   31 RealVarMarkingFormula: rval
   32                      | ival
   33                      | str
   34                      | LB RealVarMarkingFormula RB
   35                      | MINUS RealVarMarkingFormula
   36                      | RealVarMarkingFormula DIV RealVarMarkingFormula
   37                      | RealVarMarkingFormula PLUS RealVarMarkingFormula
   38                      | RealVarMarkingFormula MINUS RealVarMarkingFormula
   39                      | RealVarMarkingFormula MUL RealVarMarkingFormula
   40                      | RealVarMarkingFormula POWER RealVarMarkingFormula
   41                      | FLOOR LB RealVarMarkingFormula RB
   42                      | ABS LB RealVarMarkingFormula RB
   43                      | MIN LB RealVarMarkingFormula COMMA RealVarMarkingFormula RB
   44                      | MAX LB RealVarMarkingFormula COMMA RealVarMarkingFormula RB

   45 Sizes: NbLocations NbVariables
   46      | NbVariables NbLocations

   47 Constants: Constant
   48          | Constant Constants

   49 Constant: Const INT str EQ IntMarkingFormula SEMICOLON
   50         | Const DOUBLE str EQ RealMarkingFormula SEMICOLON

   51 NbVariables: NbVar EQ ival SEMICOLON

   52 NbLocations: NbLoc EQ ival SEMICOLON

   53 Lists: VariablesList LocationsList
   54      | LocationsList VariablesList

   55 VariablesList: VList EQ '{' VLabels '}' SEMICOLON

   56 VLabels: str
   57        | VLabels COMMA str

   58 LocationsList: LList EQ '{' LLabels '}' SEMICOLON

   59 LLabels: str
   60        | LLabels COMMA str

   61 InitFinal: init final
   62          | final init

   63 init: Iloc EQ '{' iLLabels '}' SEMICOLON

   64 iLLabels: str
   65         | iLLabels COMMA str

   66 final: Floc EQ '{' fLLabels '}' SEMICOLON

   67 fLLabels: str
   68         | fLLabels COMMA str

   69 definitions: LocationsDef EdgesDef
   70            | EdgesDef LocationsDef

   71 LocationsDef: locations EQ '{' LOCATIONS '}' SEMICOLON

   72 LOCATIONS: LOCATION
   73          | LOCATIONS LOCATION

   74 LOCATION: LB str COMMA LogExpr COMMA LB FLOWS RB RB SEMICOLON
   75         | LB str COMMA LogExpr RB SEMICOLON

   76 FLOWS: FLOW
   77      | FLOWS COMMA FLOW

   78 FLOW: str COLON RealMarkingFormula

   79 LogExpr: TRUE
   80        | FALSE
   81        | CompExpr
   82        | LogExpr AND LogExpr
   83        | LogExpr OR LogExpr
   84        | LB LogExpr RB
   85        | NOT LogExpr

   86 CompExpr: RealMarkingFormula EQ RealMarkingFormula
   87         | RealMarkingFormula LEQ RealMarkingFormula
   88         | RealMarkingFormula GEQ RealMarkingFormula
   89         | RealMarkingFormula LL RealMarkingFormula
   90         | RealMarkingFormula GG RealMarkingFormula

   91 EdgesDef: edges EQ '{' EDGES '}' SEMICOLON

   92 EDGES: EDGE
   93      | EDGE EDGES

   94 EDGE: LB LB str COMMA str RB COMMA ACTIONS COMMA CONSTRAINTS COMMA UPDATES RB SEMICOLON

   95 ACTIONS: SHARP
   96        | ALL
   97        | ALL BackSlash SetOfActions
   98        | SetOfActions

   99 SetOfActions: '{' Actions '}'

  100 Actions: str
  101        | Actions COMMA str

  102 CONSTRAINTS: CONSTRAINT
  103            | CONSTRAINT AND CONSTRAINTS
  104            | SHARP

  105 CONSTRAINT: LinearExp EQ RealMarkingFormula
  106           | LinearExp LEQ RealMarkingFormula
  107           | LinearExp GEQ RealMarkingFormula

  108 LinearExp: term
  109          | LinearExp MINUS term
  110          | LinearExp PLUS term

  111 term: str
  112     | LB RealMarkingFormula RB MUL str
  113     | ival MUL str
  114     | rval MUL str
  115     | str MUL str
  116     | MINUS str
  117     | MINUS LB RealMarkingFormula RB MUL str
  118     | MINUS ival MUL str
  119     | MINUS rval MUL str
  120     | MINUS str MUL str

  121 UPDATES: '{' Updates '}'
  122        | SHARP

  123 Updates: Update
  124        | Updates COMMA Update

  125 Update: str EQ RealVarMarkingFormula

  126 HaslExp: AVG LB AlgExpr RB SEMICOLON

  127 AlgExpr: LhaFunc
  128        | MIN LB AlgExpr COMMA AlgExpr RB
  129        | MAX LB AlgExpr COMMA AlgExpr RB
  130        | MINUS AlgExpr
  131        | FLOOR LB AlgExpr RB
  132        | ABS LB AlgExpr RB
  133        | LB AlgExpr RB
  134        | AlgExpr POWER AlgExpr
  135        | AlgExpr PLUS AlgExpr
  136        | AlgExpr MINUS AlgExpr
  137        | AlgExpr MUL AlgExpr
  138        | AlgExpr DIV AlgExpr

  139 LhaFunc: LAST LB LinForm RB
  140        | LhaMIN LB LinForm RB
  141        | LhaMAX LB LinForm RB
  142        | MEAN LB LinForm RB
  143        | VAR LB LinForm RB
  144        | INTEGRAL LB LinForm RB

  145 LinForm: VarTerm
  146        | LinForm MINUS VarTerm
  147        | LinForm PLUS VarTerm

  148 VarTerm: str
  149        | LB RealMarkingFormula RB MUL str
  150        | ival MUL str
  151        | rval MUL str
  152        | str MUL str
  153        | MINUS str
  154        | MINUS LB RealMarkingFormula RB MUL str
  155        | MINUS ival MUL str
  156        | MINUS rval MUL str
  157        | MINUS str MUL str


Terminals, with rules where they appear

"end of file" (0) 0
'{' (123) 55 58 63 66 71 91 99 121
'}' (125) 55 58 63 66 71 91 99 121
error (256)
str (258) 5 19 33 49 50 56 57 59 60 64 65 67 68 74 75 78 94 100 101
    111 112 113 114 115 116 117 118 119 120 125 148 149 150 151 152
    153 154 155 156 157
rval (259) 17 31 114 119 151 156
ival (260) 4 18 32 51 52 113 118 150 155
SEMICOLON (261) 49 50 51 52 55 58 63 66 71 74 75 91 94 126
COLON (262) 78
COMMA (263) 15 16 29 30 43 44 57 60 65 68 74 75 77 94 101 124 128 129
LB (264) 6 12 13 14 15 16 20 27 28 29 30 34 41 42 43 44 74 75 84 94
    112 117 126 128 129 131 132 133 139 140 141 142 143 144 149 154
RB (265) 6 12 13 14 15 16 20 27 28 29 30 34 41 42 43 44 74 75 84 94
    112 117 126 128 129 131 132 133 139 140 141 142 143 144 149 154
SHARP (266) 95 104 122
ALL (267) 96 97
BackSlash (268) 97
EQ (269) 49 50 51 52 55 58 63 66 71 86 91 105 125
GEQ (270) 88 107
LEQ (271) 87 106
LL (272) 89
GG (273) 90
AND (274) 82 103
OR (275) 83
NOT (276) 85
TRUE (277) 79
FALSE (278) 80
DOUBLE (279) 50
INT (280) 49
DIV (281) 14 22 36 138
MUL (282) 10 25 39 112 113 114 115 117 118 119 120 137 149 150 151
    152 154 155 156 157
PLUS (283) 8 23 37 110 135 147
MINUS (284) 7 9 21 24 35 38 109 116 117 118 119 120 130 136 146 153
    154 155 156 157
POWER (285) 11 26 40 134
FLOOR (286) 12 14 27 41 131
ABS (287) 13 28 42 132
MIN (288) 15 29 43 128
MAX (289) 16 30 44 129
LhaMIN (290) 140
LhaMAX (291) 141
AVG (292) 126
LAST (293) 139
INTEGRAL (294) 144
MEAN (295) 142
VAR (296) 143
LhaName (297)
Const (298) 49 50
NbLoc (299) 52
NbVar (300) 51
VList (301) 55
LList (302) 58
Iloc (303) 63
Floc (304) 66
locations (305) 71
edges (306) 91
NEG (307)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
LHA (56)
    on left: 1, on right: 0
declarations (57)
    on left: 2 3, on right: 1
IntMarkingFormula (58)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16, on right: 6 7 8 9 10
    11 12 13 14 15 16 49
RealMarkingFormula (59)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30, on right: 20
    21 22 23 24 25 26 27 28 29 30 50 78 86 87 88 89 90 105 106 107
    112 117 149 154
RealVarMarkingFormula (60)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44, on right: 34
    35 36 37 38 39 40 41 42 43 44 125
Sizes (61)
    on left: 45 46, on right: 2 3
Constants (62)
    on left: 47 48, on right: 2 48
Constant (63)
    on left: 49 50, on right: 47 48
NbVariables (64)
    on left: 51, on right: 45 46
NbLocations (65)
    on left: 52, on right: 45 46
Lists (66)
    on left: 53 54, on right: 2 3
VariablesList (67)
    on left: 55, on right: 53 54
VLabels (68)
    on left: 56 57, on right: 55 57
LocationsList (69)
    on left: 58, on right: 53 54
LLabels (70)
    on left: 59 60, on right: 58 60
InitFinal (71)
    on left: 61 62, on right: 1
init (72)
    on left: 63, on right: 61 62
iLLabels (73)
    on left: 64 65, on right: 63 65
final (74)
    on left: 66, on right: 61 62
fLLabels (75)
    on left: 67 68, on right: 66 68
definitions (76)
    on left: 69 70, on right: 1
LocationsDef (77)
    on left: 71, on right: 69 70
LOCATIONS (78)
    on left: 72 73, on right: 71 73
LOCATION (79)
    on left: 74 75, on right: 72 73
FLOWS (80)
    on left: 76 77, on right: 74 77
FLOW (81)
    on left: 78, on right: 76 77
LogExpr (82)
    on left: 79 80 81 82 83 84 85, on right: 74 75 82 83 84 85
CompExpr (83)
    on left: 86 87 88 89 90, on right: 81
EdgesDef (84)
    on left: 91, on right: 69 70
EDGES (85)
    on left: 92 93, on right: 91 93
EDGE (86)
    on left: 94, on right: 92 93
ACTIONS (87)
    on left: 95 96 97 98, on right: 94
SetOfActions (88)
    on left: 99, on right: 97 98
Actions (89)
    on left: 100 101, on right: 99 101
CONSTRAINTS (90)
    on left: 102 103 104, on right: 94 103
CONSTRAINT (91)
    on left: 105 106 107, on right: 102 103
LinearExp (92)
    on left: 108 109 110, on right: 105 106 107 109 110
term (93)
    on left: 111 112 113 114 115 116 117 118 119 120, on right: 108
    109 110
UPDATES (94)
    on left: 121 122, on right: 94
Updates (95)
    on left: 123 124, on right: 121 124
Update (96)
    on left: 125, on right: 123 124
HaslExp (97)
    on left: 126, on right: 2 3
AlgExpr (98)
    on left: 127 128 129 130 131 132 133 134 135 136 137 138, on right:
    126 128 129 130 131 132 133 134 135 136 137 138
LhaFunc (99)
    on left: 139 140 141 142 143 144, on right: 127
LinForm (100)
    on left: 145 146 147, on right: 139 140 141 142 143 144 146 147
VarTerm (101)
    on left: 148 149 150 151 152 153 154 155 156 157, on right: 145
    146 147


state 0

    0 $accept: . LHA "end of file"

    NbLoc  shift, and go to state 1
    NbVar  shift, and go to state 2

    LHA           go to state 3
    declarations  go to state 4
    Sizes         go to state 5
    NbVariables   go to state 6
    NbLocations   go to state 7


state 1

   52 NbLocations: NbLoc . EQ ival SEMICOLON

    EQ  shift, and go to state 8


state 2

   51 NbVariables: NbVar . EQ ival SEMICOLON

    EQ  shift, and go to state 9


state 3

    0 $accept: LHA . "end of file"

    "end of file"  shift, and go to state 10


state 4

    1 LHA: declarations . InitFinal definitions

    Iloc  shift, and go to state 11
    Floc  shift, and go to state 12

    InitFinal  go to state 13
    init       go to state 14
    final      go to state 15


state 5

    2 declarations: Sizes . Constants Lists HaslExp
    3             | Sizes . Lists HaslExp

    Const  shift, and go to state 16
    VList  shift, and go to state 17
    LList  shift, and go to state 18

    Constants      go to state 19
    Constant       go to state 20
    Lists          go to state 21
    VariablesList  go to state 22
    LocationsList  go to state 23


state 6

   46 Sizes: NbVariables . NbLocations

    NbLoc  shift, and go to state 1

    NbLocations  go to state 24


state 7

   45 Sizes: NbLocations . NbVariables

    NbVar  shift, and go to state 2

    NbVariables  go to state 25


state 8

   52 NbLocations: NbLoc EQ . ival SEMICOLON

    ival  shift, and go to state 26


state 9

   51 NbVariables: NbVar EQ . ival SEMICOLON

    ival  shift, and go to state 27


state 10

    0 $accept: LHA "end of file" .

    $default  accept


state 11

   63 init: Iloc . EQ '{' iLLabels '}' SEMICOLON

    EQ  shift, and go to state 28


state 12

   66 final: Floc . EQ '{' fLLabels '}' SEMICOLON

    EQ  shift, and go to state 29


state 13

    1 LHA: declarations InitFinal . definitions

    locations  shift, and go to state 30
    edges      shift, and go to state 31

    definitions   go to state 32
    LocationsDef  go to state 33
    EdgesDef      go to state 34


state 14

   61 InitFinal: init . final

    Floc  shift, and go to state 12

    final  go to state 35


state 15

   62 InitFinal: final . init

    Iloc  shift, and go to state 11

    init  go to state 36


state 16

   49 Constant: Const . INT str EQ IntMarkingFormula SEMICOLON
   50         | Const . DOUBLE str EQ RealMarkingFormula SEMICOLON

    DOUBLE  shift, and go to state 37
    INT     shift, and go to state 38


state 17

   55 VariablesList: VList . EQ '{' VLabels '}' SEMICOLON

    EQ  shift, and go to state 39


state 18

   58 LocationsList: LList . EQ '{' LLabels '}' SEMICOLON

    EQ  shift, and go to state 40


state 19

    2 declarations: Sizes Constants . Lists HaslExp

    VList  shift, and go to state 17
    LList  shift, and go to state 18

    Lists          go to state 41
    VariablesList  go to state 22
    LocationsList  go to state 23


state 20

   47 Constants: Constant .
   48          | Constant . Constants

    Const  shift, and go to state 16

    $default  reduce using rule 47 (Constants)

    Constants  go to state 42
    Constant   go to state 20


state 21

    3 declarations: Sizes Lists . HaslExp

    AVG  shift, and go to state 43

    HaslExp  go to state 44


state 22

   53 Lists: VariablesList . LocationsList

    LList  shift, and go to state 18

    LocationsList  go to state 45


state 23

   54 Lists: LocationsList . VariablesList

    VList  shift, and go to state 17

    VariablesList  go to state 46


state 24

   46 Sizes: NbVariables NbLocations .

    $default  reduce using rule 46 (Sizes)


state 25

   45 Sizes: NbLocations NbVariables .

    $default  reduce using rule 45 (Sizes)


state 26

   52 NbLocations: NbLoc EQ ival . SEMICOLON

    SEMICOLON  shift, and go to state 47


state 27

   51 NbVariables: NbVar EQ ival . SEMICOLON

    SEMICOLON  shift, and go to state 48


state 28

   63 init: Iloc EQ . '{' iLLabels '}' SEMICOLON

    '{'  shift, and go to state 49


state 29

   66 final: Floc EQ . '{' fLLabels '}' SEMICOLON

    '{'  shift, and go to state 50


state 30

   71 LocationsDef: locations . EQ '{' LOCATIONS '}' SEMICOLON

    EQ  shift, and go to state 51


state 31

   91 EdgesDef: edges . EQ '{' EDGES '}' SEMICOLON

    EQ  shift, and go to state 52


state 32

    1 LHA: declarations InitFinal definitions .

    $default  reduce using rule 1 (LHA)


state 33

   69 definitions: LocationsDef . EdgesDef

    edges  shift, and go to state 31

    EdgesDef  go to state 53


state 34

   70 definitions: EdgesDef . LocationsDef

    locations  shift, and go to state 30

    LocationsDef  go to state 54


state 35

   61 InitFinal: init final .

    $default  reduce using rule 61 (InitFinal)


state 36

   62 InitFinal: final init .

    $default  reduce using rule 62 (InitFinal)


state 37

   50 Constant: Const DOUBLE . str EQ RealMarkingFormula SEMICOLON

    str  shift, and go to state 55


state 38

   49 Constant: Const INT . str EQ IntMarkingFormula SEMICOLON

    str  shift, and go to state 56


state 39

   55 VariablesList: VList EQ . '{' VLabels '}' SEMICOLON

    '{'  shift, and go to state 57


state 40

   58 LocationsList: LList EQ . '{' LLabels '}' SEMICOLON

    '{'  shift, and go to state 58


state 41

    2 declarations: Sizes Constants Lists . HaslExp

    AVG  shift, and go to state 43

    HaslExp  go to state 59


state 42

   48 Constants: Constant Constants .

    $default  reduce using rule 48 (Constants)


state 43

  126 HaslExp: AVG . LB AlgExpr RB SEMICOLON

    LB  shift, and go to state 60


state 44

    3 declarations: Sizes Lists HaslExp .

    $default  reduce using rule 3 (declarations)


state 45

   53 Lists: VariablesList LocationsList .

    $default  reduce using rule 53 (Lists)


state 46

   54 Lists: LocationsList VariablesList .

    $default  reduce using rule 54 (Lists)


state 47

   52 NbLocations: NbLoc EQ ival SEMICOLON .

    $default  reduce using rule 52 (NbLocations)


state 48

   51 NbVariables: NbVar EQ ival SEMICOLON .

    $default  reduce using rule 51 (NbVariables)


state 49

   63 init: Iloc EQ '{' . iLLabels '}' SEMICOLON

    str  shift, and go to state 61

    iLLabels  go to state 62


state 50

   66 final: Floc EQ '{' . fLLabels '}' SEMICOLON

    str  shift, and go to state 63

    fLLabels  go to state 64


state 51

   71 LocationsDef: locations EQ . '{' LOCATIONS '}' SEMICOLON

    '{'  shift, and go to state 65


state 52

   91 EdgesDef: edges EQ . '{' EDGES '}' SEMICOLON

    '{'  shift, and go to state 66


state 53

   69 definitions: LocationsDef EdgesDef .

    $default  reduce using rule 69 (definitions)


state 54

   70 definitions: EdgesDef LocationsDef .

    $default  reduce using rule 70 (definitions)


state 55

   50 Constant: Const DOUBLE str . EQ RealMarkingFormula SEMICOLON

    EQ  shift, and go to state 67


state 56

   49 Constant: Const INT str . EQ IntMarkingFormula SEMICOLON

    EQ  shift, and go to state 68


state 57

   55 VariablesList: VList EQ '{' . VLabels '}' SEMICOLON

    str  shift, and go to state 69

    VLabels  go to state 70


state 58

   58 LocationsList: LList EQ '{' . LLabels '}' SEMICOLON

    str  shift, and go to state 71

    LLabels  go to state 72


state 59

    2 declarations: Sizes Constants Lists HaslExp .

    $default  reduce using rule 2 (declarations)


state 60

  126 HaslExp: AVG LB . AlgExpr RB SEMICOLON

    LB        shift, and go to state 73
    MINUS     shift, and go to state 74
    FLOOR     shift, and go to state 75
    ABS       shift, and go to state 76
    MIN       shift, and go to state 77
    MAX       shift, and go to state 78
    LhaMIN    shift, and go to state 79
    LhaMAX    shift, and go to state 80
    LAST      shift, and go to state 81
    INTEGRAL  shift, and go to state 82
    MEAN      shift, and go to state 83
    VAR       shift, and go to state 84

    AlgExpr  go to state 85
    LhaFunc  go to state 86


state 61

   64 iLLabels: str .

    $default  reduce using rule 64 (iLLabels)


state 62

   63 init: Iloc EQ '{' iLLabels . '}' SEMICOLON
   65 iLLabels: iLLabels . COMMA str

    COMMA  shift, and go to state 87
    '}'    shift, and go to state 88


state 63

   67 fLLabels: str .

    $default  reduce using rule 67 (fLLabels)


state 64

   66 final: Floc EQ '{' fLLabels . '}' SEMICOLON
   68 fLLabels: fLLabels . COMMA str

    COMMA  shift, and go to state 89
    '}'    shift, and go to state 90


state 65

   71 LocationsDef: locations EQ '{' . LOCATIONS '}' SEMICOLON

    LB  shift, and go to state 91

    LOCATIONS  go to state 92
    LOCATION   go to state 93


state 66

   91 EdgesDef: edges EQ '{' . EDGES '}' SEMICOLON

    LB  shift, and go to state 94

    EDGES  go to state 95
    EDGE   go to state 96


state 67

   50 Constant: Const DOUBLE str EQ . RealMarkingFormula SEMICOLON

    str    shift, and go to state 97
    rval   shift, and go to state 98
    ival   shift, and go to state 99
    LB     shift, and go to state 100
    MINUS  shift, and go to state 101
    FLOOR  shift, and go to state 102
    ABS    shift, and go to state 103
    MIN    shift, and go to state 104
    MAX    shift, and go to state 105

    RealMarkingFormula  go to state 106


state 68

   49 Constant: Const INT str EQ . IntMarkingFormula SEMICOLON

    str    shift, and go to state 107
    ival   shift, and go to state 108
    LB     shift, and go to state 109
    MINUS  shift, and go to state 110
    FLOOR  shift, and go to state 111
    ABS    shift, and go to state 112
    MIN    shift, and go to state 113
    MAX    shift, and go to state 114

    IntMarkingFormula  go to state 115


state 69

   56 VLabels: str .

    $default  reduce using rule 56 (VLabels)


state 70

   55 VariablesList: VList EQ '{' VLabels . '}' SEMICOLON
   57 VLabels: VLabels . COMMA str

    COMMA  shift, and go to state 116
    '}'    shift, and go to state 117


state 71

   59 LLabels: str .

    $default  reduce using rule 59 (LLabels)


state 72

   58 LocationsList: LList EQ '{' LLabels . '}' SEMICOLON
   60 LLabels: LLabels . COMMA str

    COMMA  shift, and go to state 118
    '}'    shift, and go to state 119


state 73

  133 AlgExpr: LB . AlgExpr RB

    LB        shift, and go to state 73
    MINUS     shift, and go to state 74
    FLOOR     shift, and go to state 75
    ABS       shift, and go to state 76
    MIN       shift, and go to state 77
    MAX       shift, and go to state 78
    LhaMIN    shift, and go to state 79
    LhaMAX    shift, and go to state 80
    LAST      shift, and go to state 81
    INTEGRAL  shift, and go to state 82
    MEAN      shift, and go to state 83
    VAR       shift, and go to state 84

    AlgExpr  go to state 120
    LhaFunc  go to state 86


state 74

  130 AlgExpr: MINUS . AlgExpr

    LB        shift, and go to state 73
    MINUS     shift, and go to state 74
    FLOOR     shift, and go to state 75
    ABS       shift, and go to state 76
    MIN       shift, and go to state 77
    MAX       shift, and go to state 78
    LhaMIN    shift, and go to state 79
    LhaMAX    shift, and go to state 80
    LAST      shift, and go to state 81
    INTEGRAL  shift, and go to state 82
    MEAN      shift, and go to state 83
    VAR       shift, and go to state 84

    AlgExpr  go to state 121
    LhaFunc  go to state 86


state 75

  131 AlgExpr: FLOOR . LB AlgExpr RB

    LB  shift, and go to state 122


state 76

  132 AlgExpr: ABS . LB AlgExpr RB

    LB  shift, and go to state 123


state 77

  128 AlgExpr: MIN . LB AlgExpr COMMA AlgExpr RB

    LB  shift, and go to state 124


state 78

  129 AlgExpr: MAX . LB AlgExpr COMMA AlgExpr RB

    LB  shift, and go to state 125


state 79

  140 LhaFunc: LhaMIN . LB LinForm RB

    LB  shift, and go to state 126


state 80

  141 LhaFunc: LhaMAX . LB LinForm RB

    LB  shift, and go to state 127


state 81

  139 LhaFunc: LAST . LB LinForm RB

    LB  shift, and go to state 128


state 82

  144 LhaFunc: INTEGRAL . LB LinForm RB

    LB  shift, and go to state 129


state 83

  142 LhaFunc: MEAN . LB LinForm RB

    LB  shift, and go to state 130


state 84

  143 LhaFunc: VAR . LB LinForm RB

    LB  shift, and go to state 131


state 85

  126 HaslExp: AVG LB AlgExpr . RB SEMICOLON
  134 AlgExpr: AlgExpr . POWER AlgExpr
  135        | AlgExpr . PLUS AlgExpr
  136        | AlgExpr . MINUS AlgExpr
  137        | AlgExpr . MUL AlgExpr
  138        | AlgExpr . DIV AlgExpr

    RB     shift, and go to state 132
    DIV    shift, and go to state 133
    MUL    shift, and go to state 134
    PLUS   shift, and go to state 135
    MINUS  shift, and go to state 136
    POWER  shift, and go to state 137


state 86

  127 AlgExpr: LhaFunc .

    $default  reduce using rule 127 (AlgExpr)


state 87

   65 iLLabels: iLLabels COMMA . str

    str  shift, and go to state 138


state 88

   63 init: Iloc EQ '{' iLLabels '}' . SEMICOLON

    SEMICOLON  shift, and go to state 139


state 89

   68 fLLabels: fLLabels COMMA . str

    str  shift, and go to state 140


state 90

   66 final: Floc EQ '{' fLLabels '}' . SEMICOLON

    SEMICOLON  shift, and go to state 141


state 91

   74 LOCATION: LB . str COMMA LogExpr COMMA LB FLOWS RB RB SEMICOLON
   75         | LB . str COMMA LogExpr RB SEMICOLON

    str  shift, and go to state 142


state 92

   71 LocationsDef: locations EQ '{' LOCATIONS . '}' SEMICOLON
   73 LOCATIONS: LOCATIONS . LOCATION

    LB   shift, and go to state 91
    '}'  shift, and go to state 143

    LOCATION  go to state 144


state 93

   72 LOCATIONS: LOCATION .

    $default  reduce using rule 72 (LOCATIONS)


state 94

   94 EDGE: LB . LB str COMMA str RB COMMA ACTIONS COMMA CONSTRAINTS COMMA UPDATES RB SEMICOLON

    LB  shift, and go to state 145


state 95

   91 EdgesDef: edges EQ '{' EDGES . '}' SEMICOLON

    '}'  shift, and go to state 146


state 96

   92 EDGES: EDGE .
   93      | EDGE . EDGES

    LB  shift, and go to state 94

    $default  reduce using rule 92 (EDGES)

    EDGES  go to state 147
    EDGE   go to state 96


state 97

   19 RealMarkingFormula: str .

    $default  reduce using rule 19 (RealMarkingFormula)


state 98

   17 RealMarkingFormula: rval .

    $default  reduce using rule 17 (RealMarkingFormula)


state 99

   18 RealMarkingFormula: ival .

    $default  reduce using rule 18 (RealMarkingFormula)


state 100

   20 RealMarkingFormula: LB . RealMarkingFormula RB

    str    shift, and go to state 97
    rval   shift, and go to state 98
    ival   shift, and go to state 99
    LB     shift, and go to state 100
    MINUS  shift, and go to state 101
    FLOOR  shift, and go to state 102
    ABS    shift, and go to state 103
    MIN    shift, and go to state 104
    MAX    shift, and go to state 105

    RealMarkingFormula  go to state 148


state 101

   21 RealMarkingFormula: MINUS . RealMarkingFormula

    str    shift, and go to state 97
    rval   shift, and go to state 98
    ival   shift, and go to state 99
    LB     shift, and go to state 100
    MINUS  shift, and go to state 101
    FLOOR  shift, and go to state 102
    ABS    shift, and go to state 103
    MIN    shift, and go to state 104
    MAX    shift, and go to state 105

    RealMarkingFormula  go to state 149


state 102

   27 RealMarkingFormula: FLOOR . LB RealMarkingFormula RB

    LB  shift, and go to state 150


state 103

   28 RealMarkingFormula: ABS . LB RealMarkingFormula RB

    LB  shift, and go to state 151


state 104

   29 RealMarkingFormula: MIN . LB RealMarkingFormula COMMA RealMarkingFormula RB

    LB  shift, and go to state 152


state 105

   30 RealMarkingFormula: MAX . LB RealMarkingFormula COMMA RealMarkingFormula RB

    LB  shift, and go to state 153


state 106

   22 RealMarkingFormula: RealMarkingFormula . DIV RealMarkingFormula
   23                   | RealMarkingFormula . PLUS RealMarkingFormula
   24                   | RealMarkingFormula . MINUS RealMarkingFormula
   25                   | RealMarkingFormula . MUL RealMarkingFormula
   26                   | RealMarkingFormula . POWER RealMarkingFormula
   50 Constant: Const DOUBLE str EQ RealMarkingFormula . SEMICOLON

    SEMICOLON  shift, and go to state 154
    DIV        shift, and go to state 155
    MUL        shift, and go to state 156
    PLUS       shift, and go to state 157
    MINUS      shift, and go to state 158
    POWER      shift, and go to state 159


state 107

    5 IntMarkingFormula: str .

    $default  reduce using rule 5 (IntMarkingFormula)


state 108

    4 IntMarkingFormula: ival .

    $default  reduce using rule 4 (IntMarkingFormula)


state 109

    6 IntMarkingFormula: LB . IntMarkingFormula RB

    str    shift, and go to state 107
    ival   shift, and go to state 108
    LB     shift, and go to state 109
    MINUS  shift, and go to state 110
    FLOOR  shift, and go to state 111
    ABS    shift, and go to state 112
    MIN    shift, and go to state 113
    MAX    shift, and go to state 114

    IntMarkingFormula  go to state 160


state 110

    7 IntMarkingFormula: MINUS . IntMarkingFormula

    str    shift, and go to state 107
    ival   shift, and go to state 108
    LB     shift, and go to state 109
    MINUS  shift, and go to state 110
    FLOOR  shift, and go to state 111
    ABS    shift, and go to state 112
    MIN    shift, and go to state 113
    MAX    shift, and go to state 114

    IntMarkingFormula  go to state 161


state 111

   12 IntMarkingFormula: FLOOR . LB IntMarkingFormula RB
   14                  | FLOOR . LB IntMarkingFormula DIV IntMarkingFormula RB

    LB  shift, and go to state 162


state 112

   13 IntMarkingFormula: ABS . LB IntMarkingFormula RB

    LB  shift, and go to state 163


state 113

   15 IntMarkingFormula: MIN . LB IntMarkingFormula COMMA IntMarkingFormula RB

    LB  shift, and go to state 164


state 114

   16 IntMarkingFormula: MAX . LB IntMarkingFormula COMMA IntMarkingFormula RB

    LB  shift, and go to state 165


state 115

    8 IntMarkingFormula: IntMarkingFormula . PLUS IntMarkingFormula
    9                  | IntMarkingFormula . MINUS IntMarkingFormula
   10                  | IntMarkingFormula . MUL IntMarkingFormula
   11                  | IntMarkingFormula . POWER IntMarkingFormula
   49 Constant: Const INT str EQ IntMarkingFormula . SEMICOLON

    SEMICOLON  shift, and go to state 166
    MUL        shift, and go to state 167
    PLUS       shift, and go to state 168
    MINUS      shift, and go to state 169
    POWER      shift, and go to state 170


state 116

   57 VLabels: VLabels COMMA . str

    str  shift, and go to state 171


state 117

   55 VariablesList: VList EQ '{' VLabels '}' . SEMICOLON

    SEMICOLON  shift, and go to state 172


state 118

   60 LLabels: LLabels COMMA . str

    str  shift, and go to state 173


state 119

   58 LocationsList: LList EQ '{' LLabels '}' . SEMICOLON

    SEMICOLON  shift, and go to state 174


state 120

  133 AlgExpr: LB AlgExpr . RB
  134        | AlgExpr . POWER AlgExpr
  135        | AlgExpr . PLUS AlgExpr
  136        | AlgExpr . MINUS AlgExpr
  137        | AlgExpr . MUL AlgExpr
  138        | AlgExpr . DIV AlgExpr

    RB     shift, and go to state 175
    DIV    shift, and go to state 133
    MUL    shift, and go to state 134
    PLUS   shift, and go to state 135
    MINUS  shift, and go to state 136
    POWER  shift, and go to state 137


state 121

  130 AlgExpr: MINUS AlgExpr .
  134        | AlgExpr . POWER AlgExpr
  135        | AlgExpr . PLUS AlgExpr
  136        | AlgExpr . MINUS AlgExpr
  137        | AlgExpr . MUL AlgExpr
  138        | AlgExpr . DIV AlgExpr
